--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -276,6 +276,88 @@ header{
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
+/* ====================зображення героя======================== */
+.overlay{
+    display: block;
+    max-width: 100%;
+    height: auto;  
+    
+
+    margin-left: auto;
+    margin-right: auto;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+
+    background-image: linear-gradient(
+        to right,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)),  
+        url(../images/media/hero-mobile.webp); 
+}
+
+@media screen and (min-device-pixel-ratio:2)  and (min-width: 320px),
+screen and (min-resolution:192dpi) and (min-width: 320px),
+screen and (min-resolution: 2dppx) and (min-width:320px){
+    .overlay{
+        background-image: linear-gradient(
+            to right,
+            rgba(46, 47, 66, 0.7),
+            rgba(46, 47, 66, 0.7)),  
+            url(../images/media/hero-mobile@2x.webp); 
+    }
+}
+
+@media screen and (min-width:768px) {
+    .overlay{
+    background-image: linear-gradient(
+        to right,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)),  
+        url(../images/media/hero-tablet.webp); 
+    }
+    
+}
+@media screen and (min-device-pixel-ratio:2)  and (min-width: 768px),
+screen and (min-resolution:192dpi) and (min-width: 768px),
+screen and (min-resolution: 2dppx) and (min-width:768px){
+    .overlay{
+        background-image: linear-gradient(
+            to right,
+            rgba(46, 47, 66, 0.7),
+            rgba(46, 47, 66, 0.7)),  
+            url(../images/media/hero-tablet@2x.webp); 
+    }
+}
+
+
+
+
+@media screen and (min-width:1200px) {
+    .overlay{
+    background-image: linear-gradient(
+        to right,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)),  
+        url(../images/media/hero-desktop.webp); 
+    }
+    
+}
+
+@media screen and (min-device-pixel-ratio:2)  and (min-width: 1200px),
+screen and (min-resolution:192dpi) and (min-width: 1200px),
+screen and (min-resolution: 2dppx) and (min-width:1200px){
+    .overlay{
+        background-image: linear-gradient(
+            to right,
+            rgba(46, 47, 66, 0.7),
+            rgba(46, 47, 66, 0.7)),  
+            url(../images/media/hero-desktop@2x.webp); 
+    }
+}
+/* ==================== Х зображення героя======================== */
+
+
 .customer{
     
     
@@ -846,13 +928,7 @@ h3{
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
-
-        background-image: linear-gradient(
-            to right,
-            rgba(46, 47, 66, 0.7),
-            rgba(46, 47, 66, 0.7)),  
-            url(../images/people_office.jpg); 
-            
+       
     }
 
     .hero-title{
@@ -1082,6 +1158,456 @@ h3{
 }
 
 /* ======================================Tablet================================= */
+
+/*==================================== DESCTOP============================ */
+
+@media screen and (min-width: 1200px) {
+    .logo{
+        padding-top: 24px ;
+        padding-bottom: 24px;
+      
+        font-family: 'Raleway';
+        font-weight: 800;
+        font-size: 18px;
+        line-height: 1.33;
+        text-transform:uppercase;
+        text-decoration: none;
+        color:var(--dark-color)    
+    }
+
+    .container{
+        width: 1152px;
+        margin-left: auto;
+        margin-right: auto;
+        padding-left: 12px;
+        padding-right: 12px;
+        } 
+
+    .site-nav{    
+     margin-left: 77px;       
+    } 
+
+    .site-nav .item + .item {
+        margin-left: 40px;
+    }
+
+    .item{
+        display: block;  
+        position: relative;  
+    } 
+/*header  панель навігації студія-контакт */
+
+     .nav-link{
+    display: block;
+    padding:  24px 0;
+
+
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    color:var(--dark-color);
+    text-decoration: none;  
+    
+    transition: color 250ms var(--cubic-bezier) ;
+}
+
+.nav-link:hover,
+.nav-link:focus{
+    color:var(--prbrand-color);
+} 
+/* Виділення активної сторінки, підкреслення */
+ .nav-link.current{
+    color:var(--prbrand-color);
+     
+}
+
+.current::after{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    content:' ';
+    
+    
+    
+    width: 100%;
+    height: 4px; 
+    border-radius: 2px;
+  
+    background-color: #404BBF;
+} 
+
+.contact-date{
+    display: flex;
+    padding: 0;
+    margin: 0;
+    margin-left: 331px;   
+} 
+
+.contact-link{
+    display: block;
+    padding:  24px 0;
+
+    text-decoration: none;
+    color: var(--text-color);
+
+    transition: color 250ms var(--cubic-bezier);
+}
+
+.contact-link:hover,
+.contact-link:focus{
+    color:var(--prbrand-color);    
+}
+
+.contact-date .item + .item{
+    margin-left: 40px;
+    margin-top:0 ;
+} 
+
+/* main */
+
+
+    .hero{
+        padding: 192px;
+    }
+
+.overlay{
+    
+    max-width: 1440px;
+           
+}
+
+.hero-title{
+    margin-bottom: 48px;
+    
+    color:var(--light-color) ;
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 1.07;
+    text-align: center;    
+}
+    
+.button-hero{
+    border-radius: 4px;
+    padding: 16px 32px;
+    border: 0px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+
+
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.2;   
+    font-family: inherit;
+    background-color:var(--prbrand-color);
+    color:var(--light-color);
+    letter-spacing:0.04em;
+    cursor:pointer;
+
+    
+}
+    
+        
+   
+.button-hero:hover{
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+   
+}
+
+.button-hero:focus{
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    background-color:#404BBF; 
+    color:var(--white-color);
+}     
+
+/* Секція 2 скіли */
+
+
+/* заголовок який потрібно приховати */
+ .visually-hidden {
+    position: absolute;
+      white-space: nowrap;
+      width: 1px;
+      height: 1px;
+      overflow: hidden;
+      border: 0;
+      padding: 0;
+      clip: rect(0 0 0 0);
+      clip-path: inset(50%);
+      margin: -1px;
+} 
+
+.service{
+    text-align: left; 
+}
+
+.service-list{
+    display: flex;
+    flex-wrap: nowrap;
+    padding-left: 0;
+    justify-content: space-between;
+    gap: 22px;
+
+    margin: 0;    
+}
+
+.service-list-item::before{
+    display: block;
+    content: "";
+    height: 112px;
+    border-radius: 4px;
+    
+    background-size: 64px;      
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: var(--light-color);
+    
+}
+.service-list-item:nth-child(1)::before{
+    background-image: url(../images/svg/antenna.svg);    
+}
+.service-list-item:nth-child(2)::before{
+    background-image: url(../images/svg/clock.svg);    
+}
+.service-list-item:nth-child(3)::before{
+    background-image: url(../images/svg/diagram.svg);    
+}
+.service-list-item:nth-child(4)::before{
+    background-image: url(../images/svg/astronaut.svg);    
+}
+
+
+
+.servic-subh{
+    
+    margin-bottom: 8px;
+    margin-top: 8px;
+
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.2; 
+    text-transform:capitalize;
+    color:var(--dark-color);
+} 
+
+/* ситлі для секцій  при потребі попередню теж можна обєднати*/
+
+ .wedoing{
+    text-align: center;
+    padding-bottom: 120px;
+   
+}
+.wedoing-list{
+    display: flex;
+    padding-left: 0;
+    justify-content: space-between;
+    margin-top: 0;   
+    margin-bottom: 0; 
+   
+}
+
+.wedoing-list li{
+    border: 1px solid var(--accent-color);
+}
+
+/* Our team --> */
+
+ .our-team{      
+    text-align: center;
+    background-color: var(--light-color);    
+}
+
+.section{
+    padding-bottom: 120px;
+    padding-top:120px ;
+    
+}
+
+.our-team-list{
+    display: flex;
+    padding-left: 0;
+    justify-content: space-between;
+    margin-top: 0;
+    margin-bottom:0px ;
+}
+
+.team-icon{
+    background-color: var(--white-color);
+    border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.team-text{
+    padding-top: 32px;
+    padding-bottom: 32px;
+}
+
+.section-title{
+    margin-bottom: 72px;
+
+    color:var(--dark-color) ;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.12;
+    text-transform:capitalize;   
+}
+
+.team-social{
+    display: flex;
+    justify-content: center;
+    
+    padding: 0;
+    margin-top: 12px;
+    gap: 16px;
+}
+
+.element-social{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    height: 40px;
+    width: 40px;
+    background-color: #4D5AE5;
+    border-radius: 50%;    
+}   
+
+.team-svg{
+    height: 16px;
+    width: 16px;
+   
+    fill: var(--light-color);
+      
+} 
+
+/* Customers */
+
+.customer{
+    
+    
+    text-align: center;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.16;
+    letter-spacing: 0.03em;
+    
+
+}
+
+.customer-list{
+    margin-bottom: 0;
+    margin-top: 72px;
+
+    display: flex;
+    padding: 0;
+    justify-content:space-between;
+  
+}
+.customer-svg{
+    height: 56px;
+    width: 104px;
+
+}
+
+
+.customer-link{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 88px;
+    width: 168px;
+
+    fill:var(--subtle-color);
+    border: 1px solid var(--subtle-color);
+    border-radius: 4px;
+
+    transition: fill 250ms var(--cubic-bezier),
+                border 250ms var(--cubic-bezier);
+   
+}
+
+.customer-link:hover,    
+.customer-link:focus{
+    fill:var(--prbrand-color); 
+    border: 1px solid var(--prbrand-color);
+}
+ 
+/* футер зміна кольорів */
+ footer{
+    background-color:var(--dark-color);
+    color:var(--accent-color) ;
+}
+
+.footer-block{
+    display: flex;
+    padding-top:100px ;  
+    padding-bottom: 100px;
+}
+
+.logo-footer{
+    margin-left: 0;
+    padding: 0;
+    
+    color:var(--light-color);
+}
+
+.footer-text{
+    width: 264px;
+    margin-top: 16px;
+}
+
+.footer-social{
+    margin-left: 120px;
+    width: 208px;
+
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+}
+.footer-social-list{
+    display: flex;
+    justify-content: space-between;
+    padding:0px;
+}
+
+.footer-element-social{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    height: 40px;
+    width: 40px;
+    background-color: var(--text-color);
+    border-radius: 50%;  
+    
+    transition: background-color 250ms var(--cubic-bezier);
+}
+
+.footer-element-social:hover,
+.footer-element-social:focus{
+    background-color:#31D0AA;
+}
+
+.footer-team-svg{
+    width: 24px;
+    height: 24px;
+    
+
+    fill: var(--light-color);
+} 
+
+
+
+}
+
+
+
+
+
+
+
+
+
+
+/*==================================== DESCTOP============================ */
 
 
 
