--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -196,7 +196,7 @@ header{
 
 .team-icon{
     display: inline-block;
-    width: 260px;
+    width: 264px;
     margin-top: 72px;
     
     background-color: var(--white-color);
@@ -204,9 +204,7 @@ header{
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
-.team-img{
-    display: inline;
-}
+
 
 .team-text{
     padding-top: 32px;
@@ -425,8 +423,8 @@ footer{
     margin-right: auto;
     margin-left: auto;
     width: 208px;
-    padding-top: 72px;
-    padding-bottom: 72px;
+    margin-top: 72px;
+    margin-bottom: 72px;
 
     font-weight: 500;
     font-size: 16px;
@@ -442,6 +440,15 @@ footer{
 }
 
 .footer-element-social{
+     display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    height: 40px;
+    width: 40px;
+    background-color: var(--text-color);
+    border-radius: 50%;  
+    
     transition: background-color 250ms var(--cubic-bezier);
 }
 
@@ -590,7 +597,7 @@ footer{
         border: none;
         padding: 0;
         line-height: 0;
-        fill: #4D5AE5;
+        fill: var(--dark-color);
         top: 0;
         left: 0;
 
@@ -616,6 +623,7 @@ footer{
         margin-right: auto;
         padding-left: 40px;
         padding-right: 40px;
+        padding-top: 60px;
     }
 
     .mobile-menu.is-open{
@@ -655,7 +663,6 @@ footer{
 
     .site-nav-mobile{
         padding-left: 0;      
-        padding-top: 60px;
         margin: 0;
     }
 
@@ -703,7 +710,7 @@ footer{
 
         font-weight: 700;
         font-size: 36px;
-        line-height: 1.12px;
+        line-height: 1.12;
         text-transform: capitalize;
 
         text-decoration: none;
@@ -716,13 +723,14 @@ footer{
 
     font-weight: 500;
     font-size: 20px;
-    line-height: 24px;
+    line-height: 1.1;
     }
 
     .mobile-social-list{
         display: flex;
         justify-content: space-between;
         padding:0px;
+        margin: 0;
     }
 
     .mobile-element-social{
@@ -757,8 +765,12 @@ footer{
     }
     .service-list-item{
         
-        width: 356px;
+        max-width: 356px;
         
+    }
+
+    .our-team-list{
+         justify-content: center;
     }
 }
 
@@ -855,7 +867,6 @@ footer{
 
     .contact-date{
         padding: 0;
-        padding-top: 24px;
         margin: 0;
         margin-left: 118px;   
     } 
@@ -913,7 +924,7 @@ footer{
         
         padding-left: 0;
         justify-content: space-between;
-        gap: 24px;
+        gap: 72px 24px;
     
         margin: 0;   
          
@@ -921,6 +932,7 @@ footer{
    
     .servic-subh{
         text-align: left; 
+        margin-top: 0;
     }
 
         
@@ -933,8 +945,7 @@ footer{
     .our-team-list{
         display: flex;
         flex-wrap: wrap;
-        justify-content: center;
-        
+                
         gap: 64px 24px;
         margin-top: 0;
         margin-bottom:0px ;
@@ -1002,18 +1013,6 @@ footer{
     padding:0px;
 }
 
-.footer-element-social{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-    height: 40px;
-    width: 40px;
-    background-color: var(--text-color);
-    border-radius: 50%;  
-    
-    transition: background-color 250ms var(--cubic-bezier);
-}
 
 .footer-element-social:hover,
 .footer-element-social:focus{
@@ -1295,6 +1294,9 @@ footer{
     padding-right:0;
     
     
+}
+.footer-social-list{
+    margin-bottom: 0;
 }
 
 .footer-form-input{
@@ -1847,7 +1849,7 @@ padding-right: 12px;
     border-radius: 4px;
     /* розібратись з правильними падінгами і марджином від шрифта */
     padding: 12px 24px;
-    border: 0.5px solid var(--accent-color);  
+    border: 1px solid var(--accent-color);  
     
 
     font-weight: 500;
@@ -1855,10 +1857,12 @@ padding-right: 12px;
     line-height: 1.5;   
     font-family: inherit;
 
-    background-color:var(--accent-color);
+    background-color:var(--light-color);
     color:var(--prbrand-color);
     letter-spacing:0.04em;
     cursor:pointer; 
+    
+   
     
     transition: color 250ms var(--cubic-bezier),
                 background-color 250ms var(--cubic-bezier),
@@ -1867,7 +1871,7 @@ padding-right: 12px;
 
 .button:hover,
 .button:focus{
-    border:0.5px solid transparent;
+    border-color: transparent;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 
     background-color:var(--prbrand-color); 
