--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -159,14 +159,23 @@ header{
 .service-list{
     text-align: left; 
     padding-left: 0;  
-    margin: 0;    
+    margin: 0; 
+    display: flex;   
+}
+
+@media screen and (max-width:768px) {
+    .service-list{
+        display: flex;
+        flex-direction: column;
+        gap: 76px;
+    }
+    
 }
 
 .servic-subh{
     text-align: center; 
     margin-bottom: 8px;
-    margin-top: 72px;
-
+    
     font-weight: 700;
     font-size: 36px;
     line-height: 1.1; 
@@ -193,11 +202,21 @@ header{
     margin-top: 0;
     margin-bottom: 0px;
 }
+@media screen and (max-width:768px) {
+    .our-team-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 64px 24px;
+    margin-top: 72px;
+   
+    }
+    
+    
+}
 
 .team-icon{
     width: 264px;
-    margin-top: 72px;
-    
+        
     background-color: var(--white-color);
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
@@ -586,10 +605,7 @@ footer{
         line-height: 24px;  
     }
         
-    .team-icon{
-        display: inline-block;
-    }
-
+    
     .footer-social{
         margin-top: 72px;
         margin-bottom: 72px;
@@ -624,7 +640,7 @@ footer{
     }
     .mobile-container{
         position: relative;
-        width: 428px;
+        max-width: 428px;
         margin-left: auto;
         margin-right: auto;
         padding-left: 40px;
@@ -2078,8 +2094,8 @@ padding-right: 12px;
     left: 50%;
     transform: translate(-50%,-50%);
 
-    width: 408px;
-    height:584px;  
+    max-width: 408px;
+    min-height:584px;  
     background-color: #FCFCFC;    
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;   
@@ -2259,6 +2275,9 @@ padding-right: 12px;
 
 .modal-form-check:focus+ .modal-form-check-desc::before{
     outline: 1px solid var(--prbrand-color);
+}
+.modal-form-policy{
+color: var(--prbrand-color);
 }
 .modal-form-submit{
     align-self: center;
